fix(perc-system): type install upgrade-plugin rawtypes residual (#2942) (#2994)
* fix(perc-system): type install upgrade-plugin rawtypes residual (#2942)

Type collections/iterators in remaining install upgrade plugins after #2933:
ConvertCommunityVisibility, SlotNames, CleanLocationSchemes, CleanContentStatus,
SpringBeans, UpdateExtensions, Publishing. No behavior change.

Parent: #2877. Skipped PSUpgradePluginRelationship (covered by open PR #2952).

> Co-Authored by Grok Build using grok-4.5 with agent main.

* fix(perc-system): drop dead nullntRows; type extension Iterator (#2942)

Kilo review: remove unused typed nullntRows map; type
getExtensionNames result as Iterator<PSExtensionRef> with
@SuppressWarnings(unchecked) instead of rawtypes + cast.

> Co-Authored by Grok Code using grok-4 with agent overnight-pr-followup.